--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -27,6 +27,7 @@
             "~config/*": ["./src/config/*"],
             "~core/*": ["./src/core/*"],
             "~layouts/*": ["./src/layouts/*"],
+            "~libs/*": ["./src/libs/*"],
             "~modules/*": ["./src/modules/*"],
             "~components/*": ["./src/shared/components/*"],
             "~icon/*": ["./src/shared/assets/icon/*"],
