--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
         "material-ui-confirm": "^3.0.17",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-hook-form": "^7.54.2",
         "react-redux": "^9.2.0",
+        "react-router-dom": "^6.28.1",
         "react-toastify": "^9.1.3"
     },
     "devDependencies": {
