--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
         "@mui/icons-material": "^6.3.0",
         "@mui/material": "^6.3.0",
         "@reduxjs/toolkit": "^2.5.0",
+        "@uiw/react-md-editor": "^4.0.5",
         "axios": "^1.7.9",
         "lodash": "^4.17.21",
         "material-ui-confirm": "^3.0.17",
+        "moment": "^2.30.1",
         "randomcolor": "^0.6.2",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
@@ -28,7 +30,8 @@
         "react-redux": "^9.2.0",
         "react-router-dom": "^6.28.1",
         "react-toastify": "^9.1.3",
-        "redux-persist": "^6.0.0"
+        "redux-persist": "^6.0.0",
+        "rehype-sanitize": "^6.0.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.17.0",
