--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
         "react-router-dom": "^6.28.1",
         "react-toastify": "^9.1.3",
         "redux-persist": "^6.0.0",
-        "rehype-sanitize": "^6.0.0"
+        "rehype-sanitize": "^6.0.0",
+        "socket.io-client": "^4.8.1"
     },
     "devDependencies": {
         "@eslint/js": "^9.17.0",
